--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,31 +40,28 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
 
-    compile 'com.android.support:appcompat-v7:26.+'
-    compile 'com.android.support:design:26.+'
-    compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.android.support:support-compat:26.0.0-beta2'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.firebase:firebase-client-android:2.5.0'
-    compile 'com.google.firebase:firebase-messaging:11.0.2'
-    compile 'com.google.firebase:firebase-core:11.0.2'
-    compile 'com.firebase:firebase-jobdispatcher:0.6.0'
-    compile 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.5.2'
-    compile 'com.android.volley:volley:1.0.0'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
+    implementation 'com.android.support:design:26.0.0-beta2'
+    implementation 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    implementation 'com.android.support:support-compat:26.0.0-beta2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.firebase:firebase-client-android:2.5.0'
+    implementation 'com.google.firebase:firebase-messaging:11.0.2'
+    implementation 'com.google.firebase:firebase-core:11.0.2'
+    implementation 'com.firebase:firebase-jobdispatcher:0.6.0'
+    implementation 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.5.2'
+    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.google.android.gms:play-services:11.0.2'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:mediarouter-v7:26.0.0-beta2'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
 }
-
-
-
-
-
-
-
-
 apply plugin: 'com.google.gms.google-services'
