--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        //multiDexEnabled true
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -23,6 +23,7 @@ android {
         exclude 'META-INF/NOTICE' // will not include NOTICE file
         exclude 'META-INF/LICENSE' // will not include LICENSE file
         exclude 'META-INF/MANIFEST.MF'
+        exclude 'META-INF/MANIFEST'
         exclude 'META-INF/notice'
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/license'
@@ -46,20 +47,20 @@ dependencies {
 
 
     implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
-    implementation 'com.android.support:design:26.0.0-beta2'
+    implementation 'com.android.support:design:26.0.0-beta1'
     implementation 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-    implementation 'com.android.support:support-compat:26.0.0-beta2'
+    implementation 'com.android.support:support-compat:26.0.0-beta1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.firebase:firebase-client-android:2.5.0'
     implementation 'com.google.firebase:firebase-messaging:11.0.2'
     implementation 'com.google.firebase:firebase-core:11.0.2'
-    implementation 'com.firebase:firebase-jobdispatcher:0.6.0'
-    implementation 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.5.2'
+//    implementation 'com.firebase:firebase-jobdispatcher:0.6.0'
+//    implementation 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.5.2'
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.google.android.gms:play-services:11.0.2'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:mediarouter-v7:26.0.0-beta2'
+    implementation 'com.android.support:mediarouter-v7:26.0.0-beta1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
