--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.Welcome">
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_smoke_free_black_24dp" />
@@ -35,20 +35,22 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-        <service
-            android:name=".MyJobService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.firebase.jobdispatcher.ACTION_EXECUTE" />
-            </intent-filter>
-        </service>
 
         <activity
             android:name=".SignupActivity"
-            android:theme="@style/AppTheme.Welcome" />
+            android:theme="@style/AppTheme.Welcome"
+            android:windowSoftInputMode="stateHidden"/>
         <activity
             android:name=".WelcomeActivity"
             android:theme="@style/AppTheme.Welcome" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/AppTheme.Welcome"
+            android:windowSoftInputMode="stateHidden"/>
+        <activity
+            android:name=".RegisterActivity"
+            android:theme="@style/AppTheme.Welcome"
+            android:windowSoftInputMode="stateHidden"/>
     </application>
 
 </manifest>
