--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,18 +39,20 @@
         <activity
             android:name=".SignupActivity"
             android:theme="@style/AppTheme.Welcome"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".WelcomeActivity"
             android:theme="@style/AppTheme.Welcome" />
         <activity
             android:name=".LoginActivity"
             android:theme="@style/AppTheme.Welcome"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".RegisterActivity"
             android:theme="@style/AppTheme.Welcome"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
+        <activity android:name=".RegisterFragment" />
+        <activity android:name=".LandingActivity"></activity>
     </application>
 
 </manifest>
