--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,8 @@
             android:theme="@style/AppTheme.Welcome"
             android:windowSoftInputMode="stateHidden" />
         <activity android:name=".RegisterFragment" />
-        <activity android:name=".LandingActivity"></activity>
+        <activity android:name=".LandingActivity" />
+        <activity android:name=".NotificationConfigureActivity"></activity>
     </application>
 
 </manifest>
