--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,9 +58,11 @@ dependencies {
 //    implementation 'com.firebase:firebase-jobdispatcher:0.6.0'
 //    implementation 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.5.2'
     implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.android.support:preference-v7:26.0.0-beta1'
     implementation 'com.google.android.gms:play-services:11.0.2'
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:mediarouter-v7:26.0.0-beta1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:preference-v14:26.0.0-beta1'
 }
 apply plugin: 'com.google.gms.google-services'
