--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,5 +64,7 @@ dependencies {
     implementation 'com.android.support:mediarouter-v7:26.0.0-beta1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:preference-v14:26.0.0-beta1'
+    implementation 'com.google.firebase:firebase-auth:11.0.2'
+    implementation 'com.google.android.gms:play-services-auth:11.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
