Only one page now User will log in once and will be remembered Subsequent logins will happen automatically

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,9 @@
         <activity
             android:name=".WelcomeActivity"
             android:theme="@style/AppTheme.Welcome" />
-        <activity android:name=".LandingActivity" />
+        <activity
+            android:name=".LandingActivity"
+            android:theme="@style/AppTheme.Welcome" />
     </application>
 
 </manifest>
