--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
     implementation 'com.android.support:design:26.0.0-beta1'
+    compile 'com.android.support:preference-v7:26.0.0-beta1'
     implementation 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
     implementation 'com.android.support:support-compat:26.0.0-beta1'
@@ -55,8 +56,6 @@ dependencies {
     implementation 'com.firebase:firebase-client-android:2.5.0'
     implementation 'com.google.firebase:firebase-messaging:11.0.2'
     implementation 'com.google.firebase:firebase-core:11.0.2'
-//    implementation 'com.firebase:firebase-jobdispatcher:0.6.0'
-//    implementation 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.5.2'
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.android.support:preference-v7:26.0.0-beta1'
     implementation 'com.google.android.gms:play-services:11.0.2'
