--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity
             android:name=".LandingActivity"
             android:theme="@style/AppTheme.Welcome" />
+        <activity android:name=".GeneralPreferencesFragment"></activity>
     </application>
 
 </manifest>
