--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation 'com.firebase:firebase-client-android:2.5.0'
     implementation 'com.google.firebase:firebase-messaging:11.0.2'
     implementation 'com.google.firebase:firebase-core:11.0.2'
+    implementation 'com.google.firebase:firebase-database:11.0.2'
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'com.android.support:preference-v7:26.0.0-beta1'
     implementation 'com.google.android.gms:play-services:11.0.2'
