--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -42,7 +43,11 @@
         <activity
             android:name=".LandingActivity"
             android:theme="@style/AppTheme.Welcome" />
-        <activity android:name=".GeneralPreferencesFragment"></activity>
+        <activity android:name=".GeneralPreferencesFragment" />
+        <activity
+            android:name=".WifiFragment"
+            android:label="@string/title_activity_wifi_fragment"
+            android:theme="@style/AppTheme.Welcome.NoActionBar"></activity>
     </application>
 
 </manifest>
