--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:allowBackup="true"
         android:icon="@drawable/flame_icon_large"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/red_flame"
+        android:roundIcon="@drawable/flame_red"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Welcome">
         <meta-data
