--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion '26.0.2'
+    buildToolsVersion '27.0.1'
 
     defaultConfig {
         applicationId "com.v4.nate.smokedetect"
@@ -47,25 +47,25 @@ dependencies {
 
 
     implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
-    implementation 'com.android.support:design:26.0.0-beta1'
-    compile 'com.android.support:preference-v7:26.0.0-beta1'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    compile 'com.android.support:preference-v7:26.1.0'
     implementation 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-    implementation 'com.android.support:support-compat:26.0.0-beta1'
+    implementation 'com.android.support:support-compat:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.firebase:firebase-client-android:2.5.0'
-    implementation 'com.google.firebase:firebase-messaging:11.0.2'
-    implementation 'com.google.firebase:firebase-core:11.0.2'
-    implementation 'com.google.firebase:firebase-database:11.0.2'
+    implementation 'com.google.firebase:firebase-messaging:11.6.2'
+    implementation 'com.google.firebase:firebase-core:11.6.2'
+    implementation 'com.google.firebase:firebase-database:11.6.2'
     implementation 'com.android.volley:volley:1.0.0'
-    implementation 'com.android.support:preference-v7:26.0.0-beta1'
-    implementation 'com.google.android.gms:play-services:11.0.2'
+    implementation 'com.android.support:preference-v7:26.1.0'
+    implementation 'com.google.android.gms:play-services:11.6.2'
     testImplementation 'junit:junit:4.12'
-    implementation 'com.android.support:mediarouter-v7:26.0.0-beta1'
+    implementation 'com.android.support:mediarouter-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:preference-v14:26.0.0-beta1'
-    implementation 'com.google.firebase:firebase-auth:11.0.2'
-    implementation 'com.google.android.gms:play-services-auth:11.0.2'
+    implementation 'com.android.support:preference-v14:26.1.0'
+    implementation 'com.google.firebase:firebase-auth:11.6.2'
+    implementation 'com.google.android.gms:play-services-auth:11.6.2'
 }
 apply plugin: 'com.google.gms.google-services'
