--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,10 @@
         </activity>
         <activity android:name=".activities.MainActivity" />
 
-        <service android:name=".activities.NotificationActivity">
+        <service
+            android:name=".activities.NotificationActivity"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
