--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,12 +38,18 @@
             </intent-filter>
         </service>
 
+        <activity android:name=".activities.HushActivity" />
+
         <activity
             android:name=".activities.WelcomeActivity"
             android:theme="@style/AppTheme.Welcome" />
         <activity
             android:name=".activities.LandingActivity"
             android:theme="@style/AppTheme.Welcome" />
+
+        <service
+            android:name=".services.HushService"
+            android:exported="false" />
     </application>
 
 </manifest>
